# life

./: .gitignore  CMakeLists.txt  Messages.sh  flake.nix
package/: metadata.desktop  metadata.json
package/contents/config/: main.xml
package/contents/ui/: config.qml  main.qml
plugin/: CMakeLists.txt  lifeplugin.cpp  lifeplugin.h  qmldir
